# gfp-test

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  build.py  example.py  pyproject.toml  settings.yml  simulate.py  tbump.toml
examples/: 06_remapping_layers.py  22_add_pads.py  25_slot_cross_section.py  4_circuit_optimization.ipynb  big_device_electrical.py
examples/notebooks/femwell/: TFLN_coulomb.ipynb  bent_waveguide.ipynb  bragg_filter.ipynb  calculate_GVD.ipynb  coupled_mode_theory.ipynb  crosstalk.ipynb  depletion_waveguide.ipynb  effective_area.ipynb  fiber_overlap.ipynb  grating_coupler.ipynb  leaky_mode.ipynb  leaky_waveguide.ipynb  metal_heater_phase_shifter.ipynb  metal_heater_phase_shifter_transient.ipynb  propagation_loss.ipynb  refinement.ipynb  selecting_modes.ipynb  si_heater_phase_shifter.ipynb  vary_wavelength.ipynb  vary_width.ipynb  waveguide_modes.ipynb
examples/notebooks/gdsfactory/: 01_references.ipynb  03_Path_CrossSection.ipynb  03_cells_autoname_and_cache.ipynb  03_layer_stack.ipynb  04_components_geometry.ipynb  04_components_hierarchy.ipynb  04_components_pack.ipynb  04_components_shapes.ipynb  04_routing.ipynb  07_mask.ipynb  08_pdk.ipynb  10_yaml_component.ipynb  12_grid_snapping.ipynb  _0_python.ipynb
examples/notebooks/gdsfactory-training/: 10_layout.ipynb  11_drc.ipynb  20_modesolver_fem.ipynb  21_modesolver_fdfd.ipynb  22_heater_fem.ipynb  30_mzi.ipynb  31_ring.ipynb
examples/notebooks/gplugins/: femwell_02_heater.ipynb  klayout_dataprep.ipynb  klayout_drc.ipynb  lumerical_1_fdtd_sparameters.ipynb  lumerical_2_interconnect.ipynb  meshing_01_intro.ipynb  meshing_02_2D_xy_mesh.ipynb  meshing_03_2D_uz_mesh.ipynb  meshing_04_refinement.ipynb  meshing_05_3D.ipynb  path_length_analysis.ipynb  sax_01_sax.ipynb  tcad_02_analytical_process.ipynb  tidy3d_00_tidy3d.ipynb  tidy3d_01_tidy3d_modes.ipynb  workflow_1_mzi.ipynb
examples/notebooks/meow/: 00_introduction.ipynb  01_gds_taper.ipynb  02_taper_length_sweep.ipynb  03_unequal_number_of_modes.ipynb
examples/scripts/: 00_hello_world.py  01_component_pcell.py  01_component_pcell_with_parameters.py  01_component_pcell_with_ports.py  03_move.py  04_connect.py  05_remove_layers.py  06_remapping_layers.py  07_flattening_device.py  08_grid.py  09_pack.py  11_component_layout.py  12_component_refs.py  13_component_netlist.py  14_component_connectivity.py  15_component_sequence1.py  16_component_sequence2.py  17_ports.py  18_port_pins.py  19_references.py  21_add_fiber_array.py  22_add_pads.py  24_doe.py  24_doe_3.py  25_slot_cross_section.py  30_lidar.py  30_lidar_pcell.py  30_lidar_with_pads.py  30_route_bundle_lidar.py  33_route_bundle_nxn.py  big_device.py  big_device_electrical.py  route_bundle_bbox2.py  sample_mzis.py  sample_reticle.py  simulate.py
mycspdk/: __init__.py  astar_bundle_routing.pic.yml  astar_bundle_routing.scm.yml  couplers.pic.yml  couplers.scm.yml  die_frame.pic.yml  die_frame.scm.yml  drc_errors.py  heater_schem.pic.yml  heater_schem.scm.yml  lattice.pic.yml  lattice.scm.yml  lvs_electrical.py  mask.pic.yml  mymzi.pic.yml  mzi2.pic.yml  mzi2.scm.yml  mzi_heater.pic.yml  mzi_heater.scm.yml  mzi_heater_parametric.pic.yml  mzi_heater_with_pads.pic.yml  mzi_heater_with_pads.scm.yml  mzis.py  nxn.py  nxn_chiplets.pic.yml  nxn_chiplets.scm.yml  pad_array.pic.yml  pad_array.scm.yml  pads.pic.yml  pads.scm.yml  pic_generic.py  ring_filter_with_gratings.pic.yml  ring_filter_with_gratings.scm.yml  rings.pic.yml  rings.scm.yml  rings_filter.pic.yml  rings_filter.scm.yml  sample_array.pic.yml  sample_array.scm.yml  tooclose.pic.yml
mycspdk/ports/: nxn.json
mycspdk/samples/: sample0.py  sample1.py  sample2.py  sample4.py
notebooks/femwell/: TFLN_coulomb.ipynb  bragg_filter.ipynb  calculate_GVD.ipynb  coulomb.ipynb  crosstalk.ipynb  depletion_waveguide.ipynb  fiber_overlap.ipynb  leaky_mode.ipynb  metal_heater_phase_shifter.ipynb  metal_heater_phase_shifter_transient.ipynb  propagation_loss.ipynb  refinement.ipynb  si_heater_phase_shifter.ipynb  vary_wavelength.ipynb  vary_width.ipynb  waveguide_modes.ipynb
notebooks/gdsfactory-training/: 21_modesolver_fdfd.ipynb  31_ring.ipynb  demo.yml
notebooks/gplugins/: pads_shorted_Ppad_CSmetal3.txt  sax_01_sax.ipynb  workflow_1_mzi.ipynb
pics/: demo.pic.yml  demo2.pic.yml  die_frame.pic.yml  drc_errors.py  fun.pic.yml  lattice.pic.yml  mask.pic.yml  mymzi.pic.yml  mzi2.pic.yml  mzis.py  pads.pic.yml  rings.pic.yml  simple_hierarchy.pic.yml  test.pic.yml  tooclose.pic.yml
pics/python/: prepend_show.py
pics/python/components/: C.py  L.py  bbox.py  (+104 more)
python/: drc_errors.py  prepend_show.py
python/components/: C.py  L.py  __init__.py  add_fiber_array_optical_south_electrical_north.py  add_termination.py  add_trenches.py  align.py  array_component.py  bbox.py  bend_circular.py  bend_circular_heater.py  bend_euler.py  bend_s.py  bezier.py  cavity.py  cdsem_all.py  cdsem_bend180.py  cdsem_coupler.py  cdsem_straight.py  cdsem_straight_density.py  circle.py  coh_rx_single_pol.py  coh_tx_dual_pol.py  coh_tx_single_pol.py  compass.py  component_sequence.py  copy_layers.py  coupler.py  coupler90.py  coupler90bend.py  coupler_adiabatic.py  coupler_asymmetric.py  coupler_bent.py  coupler_broadband.py  coupler_full.py  coupler_ring.py  coupler_straight.py  coupler_straight_asymmetric.py  coupler_symmetric.py  cross.py  (+119 more)
python/samples/: 00_hello_world.py  01_component_pcell.py  01_component_pcell_with_parameters.py  01_component_pcell_with_ports.py  03_move.py  04_connect.py  05_remove_layers.py  06_remapping_layers.py  07_flattening_device.py  08_grid.py  09_pack.py  11_component_layout.py  12_component_refs.py  13_component_netlist.py  14_component_connectivity.py  15_component_sequence1.py  17_ports.py  18_port_pins.py  19_references.py  21_add_fiber_array.py  22_add_pads.py  24_doe.py  24_doe_3.py  25_slot_cross_section.py  30_lidar.py  30_lidar_pcell.py  30_lidar_with_pads.py  30_route_bundle_lidar.py  33_route_bundle_nxn.py  __init__.py  big_device.py  big_device_electrical.py  route_bundle_bbox2.py  sample_mzis.py  sample_reticle.py
(+68 files in other folders)
