[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "pip", "build", "wheel"]

[project]
authors = [{name = "GDSFactory", email = "support@gdsfactory.com"}]
classifiers = ["Programming Language :: Python :: 3.12"]
dependencies = [
  "cspdk==0.13.0",
  "doroutes>=0.0.2",
  "gdsfactoryplus>=0.35.8"
]
description = "My cspdk demo project"
keywords = ["eda", "photonics", "python", "cspdk", "cornerstone"]
license = {file = "LICENSE"}
name = "mycspdk"
readme = "README.md"
requires-python = "~=3.12.0"
version = "0.0.0"

[project.optional-dependencies]
dev = [
  "pre-commit",
  "ruff",
  "ruff",
  "tbump",
  "uv"
]

[tool.codespell]
ignore-words-list = "te, te/tm, te, ba, fpr, fpr_spacing, ro, nd, donot, schem"

[tool.gdsfactoryplus.drc]
timeout = 300

[tool.gdsfactoryplus.pdk]
name = "cspdk.si220"

[tool.pyright]
reportMissingImports = true
reportMissingTypeStubs = false
reportPrivateImportUsage = false
reportUnknownMemberType = false
reportUnusedCallResult = false
reportUnusedExpression = false

[tool.ruff]
ignore = [
  "B008",  # do not perform function calls in argument defaults
  "B028",  # stacklevel
  "B904",
  "B905",  # `zip()` without an explicit `strict=` parameter
  "C408",  # C408 Unnecessary `dict` call (rewrite as a literal)
  "C901",  # too complex
  "D100",  # public module docstrings
  "D101",  # public class docstrings
  "D102",  # public method docstrings
  "D103",  # public function docstrings
  "D104",  # public package docstrings
  "E501"  # line too long, handled by black
]
select = [
  "B",  # flake8-bugbear
  "C",  # flake8-comprehensions
  "D",  # pydocstyle
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "I",  # isort
  "T10",  # flake8-debugger
  "UP",  # pyupgrade
  "W"  # pycodestyle warnings
]

[tool.ruff.pydocstyle]
convention = "google"

[tool.setuptools.package-data]
mycspdk = ["**/*.yml"]

[tool.setuptools.packages.find]
exclude = ["examples*"]
namespaces = false
where = ["."]

[tool.tbump]

[[tool.tbump.file]]
src = "README.md"

[[tool.tbump.file]]
src = "pyproject.toml"

[[tool.tbump.file]]
src = "mycspdk/__init__.py"

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "{new_version}"

[tool.tbump.version]
current = "0.0.0"
regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  '''
